@@ -1,3 +1,5 @@
+- Fix: CurricularPeriod comparator should also compare its type
+
 25.7.0 (24-12-2019)
 - Refactor: Replaced ExecutionSemester references to ExecutionInterval
 
